--- a/Requestr/Requestr.csproj
+++ b/Requestr/Requestr.csproj
@@ -25,5 +25,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
