--- a/Requestr/Requestr.csproj
+++ b/Requestr/Requestr.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bunq.Sdk" Version="1.13.0" />
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Mailjet.Api" Version="1.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
